--- a/index.html
+++ b/index.html
@@ -1,58 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto - Menu de Navegação Simples</title>
-    <style>
-        .menu {
-            border: 1px solid red;
-            background-color: red;
-            width: 60px;
-            height: 60px;
-
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .menu:hover {
-            cursor: pointer;
-        }
-
-        .line {
-            display: block;
-            border: 1px solid black;
-            background-color: black;
-            width: 100%;
-            height: 4px;
-
-            border-radius: 8px;
-
-        }
-
-        .line:not(:first-child) {
-            margin-top: 6px;
-        }
-
-        .menu-ativo .line:nth-child(1) {
-            transform: rotate(40deg) translate(8px, 8px);
-
-
-        }
-    </style>
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <button class="menu menu-ativo">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-        </button>
-    </div>
+    
 </body>
-
 </html>
